force-app/main/default/objects/Product2/fields/FIN_AXSProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSProduct__c</fullName>
    <label>AXS Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>