force-app/main/default/objects/Product2/fields/FIN_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>FIN_Product_Id__c</fullName>
    <label>Product Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>