force-app/main/default/objects/Product2/fields/FIN_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Type__c</fullName>
    <description>Ticket Category</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>CC Add On</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Promoter Add On</fullName>
            </value>
            <value>
                <fullName>Venue Add On</fullName>
            </value>
            <value>
                <fullName>License Fee</fullName>
                <isActive>false</isActive>
                <label>License Fee</label>
            </value>
            <value>
                <fullName>Non revenue-bearing</fullName>
                <isActive>false</isActive>
                <label>Non revenue-bearing</label>
            </value>
            <value>
                <fullName>Revenue Center</fullName>
                <isActive>false</isActive>
                <label>Revenue Center</label>
            </value>
            <value>
                <fullName>Revenue-bearing</fullName>
                <isActive>false</isActive>
                <label>Revenue-bearing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>