force-app/main/default/objects/Product2/fields/FIN_Zone__c.field-meta.xml
<CustomField>
    <fullName>FIN_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Vouchers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>