force-app/main/default/objects/Product2/fields/Product_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_Formula__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID (Formula)</label>
    <type>Text</type>
</CustomField>