force-app/main/default/objects/Product2/recordTypes/FIN_Product.recordType-meta.xml
<RecordType>
    <fullName>FIN_Product</fullName>
    <active>true</active>
    <label>FIN Product</label>
</RecordType>